GNU grep NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  The --include, --exclude, and --exclude-dir options now handle
  command-line arguments more consistently.  --include and --exclude
  apply only to non-directories and --exclude-dir applies only to
  directories.  "-" (standard input) is never excluded, since it is
  not a file name.
  [bug introduced in grep-2.5]

  grep no longer rejects "grep -qr . > out", i.e., when run with -q
  and an input file is the same as the output file, since with -q
  grep generates no output, so there is no risk of infinite loop or
  of an output-affecting race condition.  Thus, the use of the following
  options also disables the input-equals-output failure:
    --max-count=N (-m) (for N >= 2)
    --files-with-matches (-l)
    --files-without-match (-L)
  [bug introduced in grep-2.10]


* Noteworthy changes in release 2.10 (2011-11-16) [stable]

** Bug fixes

  grep no longer mishandles high-bit-set pattern bytes on systems
  where "char" is a signed type. [bug appears to affect only MS-Windows]

  grep now rejects a command like "grep -r pattern . > out",
  in which the output file is also one of the inputs,
  because it can result in an "infinite" disk-filling loop.
  [bug present since "the beginning"]

** Build-related

  "make dist" no longer builds .tar.gz files.
  xz is portable enough and in wide-enough use that distributing
  only .tar.xz files is enough.


* Noteworthy changes in release 2.9 (2011-06-21) [stable]

** Bug fixes

  grep no longer clobbers heap for an ERE like '(^| )*( |$)'
  [bug introduced in grep-2.6]

  grep is faster on regular expressions that match multibyte characters
  in brackets (such as '[áéíóú]').

  echo c|grep '[c]' would fail for any c in 0x80..0xff, with a uni-byte
  encoding for which the byte-to-wide-char mapping is nontrivial.  For
  example, the ISO-88591 locales are not affected, but ru_RU.KOI8-R is.